--- a/src/components/ProductD/productbio.css
+++ b/src/components/ProductD/productbio.css
@@ -1,19 +1,33 @@
 .boton {
-border-radius: 50px;
-background: #73d629;
-white-space: nowrap;
-padding:12px 30px;
-color:#fff;
-font-size:16px;
-outline: none;
-border: none;
-cursor: pointer;
-display: flex;
-justify-content: center;
-align-items: center;
-transition: all 0.2s ease-in-out;
+  border-radius: 50px;
+  background: #73d629;
+  white-space: nowrap;
+  padding: 12px 30px;
+  color: #fff;
+  font-size: 16px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
 }
-&:hover {
-    transition: all 0.2s ease-in-out; 
-    background: #010606;
+.boton:hover {
+  transition: all 0.2s ease-in-out;
+  background: #010606;
+}
+
+.productoImagen {
+  width: 400px;
+}
+@media screen and (max-width: 1024px) {
+  .productoImagen {
+    width: 300px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .productoImagen {
+    width: 150px;
+  }
 }
